--- a/scripts/Nashville Excercise 1.Rmd
+++ b/scripts/Nashville Excercise 1.Rmd
@@ -28,7 +28,7 @@ setwd(dirname(rstudioapi::getActiveDocumentContext()$path))
 ## Post Match Analysis
 ##### Nashville SC vs. Orlando City SC -- Nov. 23rd, 2021
 
-A quick look at [Statbomb's assessment of the match (via FBRef)](https://fbref.com/en/matches/edd92a6d/Nashville-SC-Orlando-City-November-23-2021-Major-League-Soccer) and [FootyStat's xG values](https://footystats.org/usa/orlando-city-sc-vs-nashville-sc-mls-h2h-stats#1448602), it is clear that Nashville scarcely deserved to win the match:
+As demonstrated by [Statbomb's (via FBRef)](https://fbref.com/en/matches/edd92a6d/Nashville-SC-Orlando-City-November-23-2021-Major-League-Soccer) and [FootyStat's](https://footystats.org/usa/orlando-city-sc-vs-nashville-sc-mls-h2h-stats#1448602) assessment of the match, it is clear that Nashville scarcely deserved to win the game:
 
 ```{r, echo=FALSE, out.width="50%", fig.cap="FBRef", fig.align='center'}
 knitr::include_graphics("NSH vs ORL FBRef.png")
@@ -56,7 +56,7 @@ Next, here are a few [statistics provided by SofaScore (via Opta)](https://www.s
 knitr::include_graphics("NSH vs ORL Sofa.png")
 ```
 
-All in all, __Nashville consistently absorbed their opponent's pressure to create lethal counter-attacking opportunities, but struggled to convert those chances into high-quality chances__.
+All in all, __Nashville consistently absorbed their opponent's pressure to create lethal counter-attacking opportunities, but struggled to convert the high-quality chances they produced into dangerous shots__.
 
 =========================================================================================================
 
@@ -82,13 +82,13 @@ kable(data.frame(game_data)[,c(1,4,6,7:12,16)], caption = "2021 Philadelphia Uni
 ```
 
 
-In 84% of their games over the last two MLS seasons, Philadelphia played in a __4-4-2◆__ formation. __This is the formation we will assume Union will be using in their next match against Nashville SC__. Though it would be useful also analyze the club's __4-3-2-1__ formation, which they used in Nashville's latest defeat, they have only ever deployed it a handful of times. 
+In 84% of their games over the last two MLS seasons, Philadelphia played in a __4-4-2◆__ formation. __This is the formation we will assume Union will be using in their next match against Nashville SC__. Though it would have been useful to analyze the Union's __4-3-2-1__ formation, which they used in Nashville's latest defeat, they have only ever deployed it a handful of times. 
 
 
-Nashville SC has only ever played Union three times. When playing with two strikers up front, Nashville got just one point from two games. When Nashville lined up with only one striker against Orlando, the team won the game. __So, it would appear the team should favor playing with a single striker rather than a partnership__, but obviously the sample sizes behind that analysis are ridiculously low to trust its conclusion.
+Interestingly, Nashville SC has only ever played Union three times. When playing with two strikers up front, Nashville got just one point from two games. When playing with only one striker against Philadelphia, Nashville won the game comfortably. __So, it would appear the team should favor playing with a single striker rather than a partnership__, but obviously the sample sizes behind that analysis are ridiculously low to trust its conclusion.
 
 
-To get more robust results, I analyzed a custom data set that I put together from [FBRef](https://fbref.com/en/squads/46024eeb/Philadelphia-Union-Stats) (a sample of which is shown below) and performed an [Ordinary Least Squares Regression with Robust Standard Errors](https://www.rdocumentation.org/packages/estimatr/versions/0.30.4/topics/lm_robust) to evaluate the effect that a team's choice of formation against Union's 4-4-2◆ had on their chances of success.
+To get more robust results, I analyzed a custom data set that I assembled from [FBRef](https://fbref.com/en/squads/46024eeb/Philadelphia-Union-Stats) (a sample of which is shown below) and performed an [Ordinary Least Squares Regression with Robust Standard Errors](https://www.rdocumentation.org/packages/estimatr/versions/0.30.4/topics/lm_robust) to evaluate the effect that a team's choice of formation against Union's 4-4-2◆ had on their chances of success.
 
 ##### __Relevant Variables__
 * __xGD:__ tells us the difference between the xG for and xG against for a given match. A value above 0 suggests Union outperformed their opponent, while negative values tell us Philadelphia should have been beaten.
@@ -137,9 +137,9 @@ With those observations in mind, this analysis tells us that __if Nashville SC i
 
 ### Individual-level Insights
 
-To find insights on the individual-level for Nashville's next match against Oralndo city, I used [American Soccer Analysis' (ASA) Goals Added](https://www.americansocceranalysis.com/what-are-goals-added) metric to identify the most integral players to Orlando's playmaking and goal scoring. 
+To find insights on the individual-level for Nashville's next match against Philadelphia Union, I used [American Soccer Analysis' (ASA) Goals Added](https://www.americansocceranalysis.com/what-are-goals-added) metric to identify the most integral players to Union's play-making and goal scoring. 
 
-The following six players were The Lions' top producers in each category. The "Percentile" column tells us what percentage of players scored lower in ASA's rankings during the 2021 MLS season. For example, __Mauricio Pereyra's 0.11 Passing Goals Added/90 was better than 99% of other scores in the same category__.
+The following six players were Philadelphia's top producers in each category. The "Percentile" column tells us what percentage of players scored lower in ASA's rankings during the 2021 MLS season. For example, __Jack Elliott's 0.06 Passing Goals Added/90 was better than 83% of other scores in the same category__.
 
 ```{r, include=FALSE}
 #Loading in the match data for each game where Philadelphia has used a 4-2-3-1 formation since 2019 when their current head coach took over. This data was found here: https://app.americansocceranalysis.com/#!/mls/goals-added/players
@@ -156,6 +156,9 @@ names(union_passing_goals_added)[5] <- "Percentile"
 
 #Cleaning the Percentile column
 union_passing_goals_added$Percentile <- round(union_passing_goals_added$Percentile)
+
+#Reordering the Shooting Goals Added
+union_passing_goals_added <- union_passing_goals_added[order(union_passing_goals_added$Percentile, decreasing = TRUE), ]
 
 #@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@
 #Getting the Shooting Goals Added Statistics for union's 2021 squad.
@@ -188,7 +191,7 @@ kable(union_shooting_goals_added, caption = "2021 Philadelphia Union Shooting Go
 
 ## Phil. Union Set-Piece Analysis
 
-To get a general idea of Philadelphia's behavior during set-pieces, I used [ASA's xGoal](https://app.americansocceranalysis.com/#!/mls/xgoals/teams) data to rank each team's non-corner set-piece/corner efficiency and frequency in relation to other MLS teams. Those results shown below:
+To get a general idea of Philadelphia's behavior during set-pieces, I used [ASA's xGoal](https://app.americansocceranalysis.com/#!/mls/xgoals/teams) data to analyze each team's non-corner set-piece and corner kick performances __in terms of efficiency and frequency__ in relation to other MLS teams. Those results shown below:
 
 ```{r, include=FALSE}
 #Loading in the match corner and set-piece data.
@@ -210,15 +213,15 @@ kable(set_piece_data[c(16:20),], row.names = F, caption = "2021 MLS Set-piece To
 kable(corner_data[c(1:5),], row.names = F, caption = "2021 MLS Corner Totals (Ranked By Efficiency)")
 ```
 
-In terms of non-corner set-pieces, Union performed poorly. Ranking 24^th^ of 27^th^ in xG per shot during the 2021 MLS season, they pose little threat from that area. 
+In terms of non-corner set-pieces, Union performed very poorly. The team ranked 24^th^ of 27^th^ in xG per shot during the 2021 MLS season. If they have not improved their approach since last season, they will pose very little threat in 2022.
 
-Additionally, they seldom choose to shoot the ball. In fact, __Union shoots from set-pieces 25% less than LAFC, who led the league in shots from free-kicks__. Instead, __Philadelphia generally chooses to use their free kicks as opportunities to set up subsequent chances that might prove to be more valuable__.
+Additionally, Philadelphia seldom chooses to shoot the ball. In fact, __Union shoots from set-pieces 25% less than LAFC, who led the league in shots from free-kicks__. Instead, __Philadelphia generally chooses to use their free kicks as opportunities to set up subsequent chances that might prove to be more valuable__.
 
-Ironically, __Union were the most productive scorers from corner kicks during the 2021 MLS season__; producing nearly twice as much xG per shot as Austin FC. 
+Ironically, __Union were the most productive scorers from corner kicks during the 2021 MLS season__; producing 29% more xG per attempt than the league average. 
 
 #### Takeaways
 
-* Given that the kick is not being taken from a particularly threatening area, Nashville should focus on defending against dangerous passes rather than blocking shots while defending non-corner set-pieces. Setting up for counter attacks may be beneficial if the Boys In Gold are able to win the ball back from Union.
+* Nashville should focus on defending against dangerous passes rather than blocking shots while defending Philadelphia's non-corner set-pieces. If Nashville is able to reliably regain possession from Union, the team should set up to take advantage of potential counter attacking opportunities.
 
 * Philadelphia's corner kicks should be met with "no-nonsense" defending and be cleared rather than trying to played. 
 
